# eaam

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default_config.yaml
eaam/: __init__.py  cli.py  config.py  models.py
eaam/emotion/: __init__.py  encoder.py  vad_lexicon.py
eaam/engine/: __init__.py  consolidator.py  encoder.py  loop_engine.py  retriever.py  surfaces.yaml  xo_loop.py
eaam/server/: mcp_server.py  proxy.py
eaam/store/: __init__.py  graph.py  memory_store.py  vector.py
tests/: autotuner.py  bench_locomo.py  bench_locomo_v2.py  bench_longmemeval.py  bench_memorystress.py  benchmark.py  dialog_benchmark.py  llm_judge.py  recursive_loop.py  run_loop_engine.py  run_xo_loop.py  test_emotion.py  test_graph.py  test_models.py  xo_parallel_agent.py
